test/compile_failure/08_void_return_value.c
// EXPECT-ERRORS: 1
// EXPECT: void function should not return a value
void run() {
    return 1;
}
